fix linters and fonts added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="alguma coisa ainda">
-    <meta name="keywords" content="...">
-    <meta name="author" content="ChartProjectGroup">
+    <meta name="description" content="alguma coisa ainda" />
+    <meta name="keywords" content="..." />
+    <meta name="author" content="ChartProjectGroup" />
 
     <title>Chart Application</title>
-
+    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Open+Sans:wght@300;500;600;800&family=Roboto:wght@300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
